--- a/themes/gp-dolomiti/sass/imports/modules/_branding.scss
+++ b/themes/gp-dolomiti/sass/imports/modules/_branding.scss
@@ -90,6 +90,22 @@
 		{
 			position:relative;
 			display:inline-block;
+
+			&:before
+			{
+				content:" ";
+				position:absolute;
+				@include rem(top, -15);
+				@include rem(right, -15);
+				@include rem(bottom, -15);
+				@include rem(left, -15);
+				@include background(radial-gradient(rgba(255,255,255,.8), rgba(255,255,255, 0) 70%));
+			}
+
+			> div
+			{
+				position:relative;
+			}
 		}
 	}
 
